LLM4Config/assets/psa-restricted-patcher_psa-restricted-patcher.yaml
---
# Source: psa-restricted-patcher/templates/rbac.yaml
---
# Source: psa-restricted-patcher/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-psa-restricted-patcher
  labels:
    helm.sh/chart: psa-restricted-patcher-0.10.1
    app.kubernetes.io/name: psa-restricted-patcher
    app.kubernetes.io/instance: my-psa-restricted-patcher
    app.kubernetes.io/version: "0.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: psa-restricted-patcher
    app.kubernetes.io/instance: my-psa-restricted-patcher
---
# Source: psa-restricted-patcher/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-psa-restricted-patcher
  labels:
    helm.sh/chart: psa-restricted-patcher-0.10.1
    app.kubernetes.io/name: psa-restricted-patcher
    app.kubernetes.io/instance: my-psa-restricted-patcher
    app.kubernetes.io/version: "0.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: psa-restricted-patcher
      app.kubernetes.io/instance: my-psa-restricted-patcher
  template:
    metadata:
      labels:
        app.kubernetes.io/name: psa-restricted-patcher
        app.kubernetes.io/instance: my-psa-restricted-patcher
    spec:
      serviceAccountName: my-psa-restricted-patcher
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tls
          secret:
            secretName: psa-restricted-patcher
            optional: false
        - name: config-volume
          configMap:
            name: my-psa-restricted-patcher-config
            items:
              - key: production.json
                path: production.json
      containers:
        - volumeMounts:
          - name: tls
            mountPath: '/var/run/secrets/tls'
            readOnly: true
          - name: config-volume
            mountPath: /var/run/config/
            readOnly: true
          name: psa-restricted-patcher
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          image: "ghcr.io/bryopsida/psa-restricted-patcher:main"
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status
              port: https
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /status
              port: https
              scheme: HTTPS
            periodSeconds: 5
            failureThreshold: 2
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
            requests:
              cpu: "0.25"
              memory: 128Mi
---
# Source: psa-restricted-patcher/templates/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-psa-restricted-patcher-hooks
webhooks:
- name:  my-psa-restricted-patcher.default.svc
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 1
  failurePolicy: "Ignore"
  reinvocationPolicy: "IfNeeded"
  namespaceSelector:
    {}
  objectSelector:
    {}
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    scope: "*"
  clientConfig:
    service:
      namespace: default
      name: my-psa-restricted-patcher
      path: /api/v1/admission
